correct validation errors

--- a/about.html
+++ b/about.html
@@ -44,13 +44,13 @@
     <main>
         <div class="gridBlockOne containerAbout">
             <picture class="aboutImage">
-                <source media="(min-width: 1200px)" srcset="images\gubbar_rad_desktop.webp" width="1000" height="563"
+                <source media="(min-width: 1200px)" srcset="images/gubbar_rad_desktop.webp" width="1000" height="563"
                     type="image/webp">
-                <source media="(max-width: 1199px) and (min-width: 850px)" srcset="images\gubbar_rad_tablet.webp"
+                <source media="(max-width: 1199px) and (min-width: 850px)" srcset="images/gubbar_rad_tablet.webp"
                     width="500" height="281" type="image/webp">
-                <source media="(max-width: 849px)" srcset="images\gubbar_rad_mobile.webp" width="300" height="169"
+                <source media="(max-width: 849px)" srcset="images/gubbar_rad_mobile.webp" width="300" height="169"
                     type="image/webp">
-                <img class="hero" src="images\gubbar_rad.png" alt="legogubbar som representerar anställda på företaget"
+                <img class="hero" src="images/gubbar_rad.png" alt="legogubbar som representerar anställda på företaget"
                     width="1000" height="563">
             </picture>
         </div>
