--- a/product5.html
+++ b/product5.html
@@ -57,35 +57,35 @@
                     längre beskrivning av produkten ska stå här. Den bör bli ca 3 - 4 meningar lång.
                 </p>
                 <p class="mesurement">Mått: 30 x 30 cm</p>
+            </article>
         </section>
         <div class="productImages gridSectionOne">
-            <a href="images\product5\product5_lightbox.jpg" target="_blank" data-lightbox="product1-images">
+            <a href="images/product5/product5_lightbox.jpg" target="_blank" data-lightbox="product1-images">
                 <picture>
-                    <source srcset="images\product5\product5_main.webp" width="450" height="338" type="image/webp">
-                    <img src="images\product5\product5_main.jpg" alt="gul och blå legokruka med grön växt" width="450"
+                    <source srcset="images/product5/product5_main.webp" width="450" height="338" type="image/webp">
+                    <img src="images/product5/product5_main.jpg" alt="gul och blå legokruka med grön växt" width="450"
                         height="338">
                 </picture>
             </a>
             <div class="thumbnailsProduct">
-                <a href="images\product5\product5_2lightbox.jpg" target="_blank" data-lightbox="product1-images">
+                <a href="images/product5/product5_2lightbox.jpg" target="_blank" data-lightbox="product1-images">
                     <picture>
-                        <source srcset="images\product5\product5_2mainsmall.webp" width="150" height="113"
+                        <source srcset="images/product5/product5_2mainsmall.webp" width="150" height="113"
                             type="image/webp">
-                        <img src="images\product5\product5_2mainsmall.jpg" alt="gul och blå legokruka med grön växt"
+                        <img src="images/product5/product5_2mainsmall.jpg" alt="gul och blå legokruka med grön växt"
                             width="150" height="113">
                     </picture>
                 </a>
-                <a href="images\product5\product5_3lightbox.jpg" target="_blank" data-lightbox="product1-images">
+                <a href="images/product5/product5_3lightbox.jpg" target="_blank" data-lightbox="product1-images">
                     <picture>
-                        <source srcset="images\product5\product5_3mainsmall.webp" width="150" height="113"
+                        <source srcset="images/product5/product5_3mainsmall.webp" width="150" height="113"
                             type="image/webp">
-                        <img src="images\product5\product5_3mainsmall.jpg" alt="gul och blå legokruka med grön växt"
+                        <img src="images/product5/product5_3mainsmall.jpg" alt="gul och blå legokruka med grön växt"
                             width="150" height="113">
                     </picture>
                 </a>
             </div>
         </div>
-        </article>
         <div class="video">
 
         </div>
