--- a/products.html
+++ b/products.html
@@ -48,9 +48,9 @@
                 <a href="product1.html">
                 <div>
                     <picture>
-                        <source srcset="images\product1\product1_thumbnail.webp" width="200" height="150"
+                        <source srcset="images/product1/product1_thumbnail.webp" width="200" height="150"
                             type="image/webp">
-                        <img src="images\product1\product1_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
+                        <img src="images/product1/product1_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
                             width="200" height="150">
                     </picture>
                     <h2>Produktnamn</h2>
@@ -62,9 +62,9 @@
             <article class="productOverview">
                 <div>
                     <picture>
-                        <source srcset="images\product2\product2_thumbnail.webp" width="200" height="150"
+                        <source srcset="images/product2/product2_thumbnail.webp" width="200" height="150"
                             type="image/webp">
-                        <img src="images\product2\product2_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
+                        <img src="images/product2/product2_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
                             width="200" height="150">
                     </picture>
                     <h2>Produktnamn</h2>
@@ -75,9 +75,9 @@
             <article class="productOverview">
                 <div>
                     <picture>
-                        <source srcset="images\product3\product3_thumbnail.webp" width="200" height="150"
+                        <source srcset="images/product3/product3_thumbnail.webp" width="200" height="150"
                             type="image/webp">
-                        <img src="images\product3\product3_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
+                        <img src="images/product3/product3_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
                             width="200" height="150">
                     </picture>
                     <h2>Produktnamn</h2>
@@ -88,9 +88,9 @@
             <article class="productOverview">
                 <div>
                     <picture>
-                        <source srcset="images\product4\product4_thumbnail.webp" width="200" height="150"
+                        <source srcset="images/product4/product4_thumbnail.webp" width="200" height="150"
                             type="image/webp">
-                        <img src="images\product4\product4_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
+                        <img src="images/product4/product4_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
                             width="200" height="150">
                     </picture>
                     <h2>Produktnamn</h2>
@@ -101,9 +101,9 @@
             <article class="productOverview">
                 <div>
                     <picture>
-                        <source srcset="images\product5\product5_thumbnail.webp" width="200" height="150"
+                        <source srcset="images/product5/product5_thumbnail.webp" width="200" height="150"
                             type="image/webp">
-                        <img src="images\product5\product5_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
+                        <img src="images/product5/product5_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
                             width="200" height="150">
                     </picture>
                     <h2>Produktnamn</h2>
