--- a/cart.html
+++ b/cart.html
@@ -46,8 +46,8 @@
             <h1>Min varukorg</h1>
             <article class="cartCheckout">
                 <picture>
-                    <source srcset="images\product1\product1_thumbnail.webp" width="200" height="150" type="image/webp">
-                    <img src="images\product1\product1_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
+                    <source srcset="images/product1/product1_thumbnail.webp" width="200" height="150" type="image/webp">
+                    <img src="images/product1/product1_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
                         width="200" height="150">
                 </picture>
                 <div class="checkoutDetails">
