--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
     <header>
         <div class="verticalCenter">
             <div class="topnav">
-                <picture class="headerLogo">
-                    <source media="(min-width: 900px)" srcset="images/logotype_full_white.svg" width="1100" height="85"
-                        type="image/svg+xml">
-                    <source media="(max-width: 899px)" srcset="images/logotype_small_white.svg" width="150" height="100"
-                        type="image/svg+xml">
-                    <img class="logotype" src="images/logotype_small_white.svg" alt="Lego Interior Design" width="1100"
-                        height="85">
-                </picture>
+                <a href="index.html">
+                    <picture class="headerLogo">
+                        <source media="(min-width: 900px)" srcset="images/logotype_full_white.svg" width="1100"
+                            height="85" type="image/svg+xml">
+                        <source media="(max-width: 899px)" srcset="images/logotype_small_white.svg" width="150"
+                            height="100" type="image/svg+xml">
+                        <img class="logotype" src="images/logotype_small_white.svg" alt="Lego Interior Design"
+                            width="1100" height="85">
+                    </picture>
+                </a>
                 <a href="javascript:void(0);" class="icon-menu">
                     <img id="hamburgerMenu" src="images/mobile_hamburger_menu.svg" alt="öppna navigeringsmeny">
                 </a>
