change product images

--- a/products.html
+++ b/products.html
@@ -41,17 +41,17 @@
             </div>
         </div>
     </div>
-    <main>
+    <main class="productsGrid">
         <section class="productsPage gridSectionTwo">
             <h1>Produkter</h1>
             <article class="productOverview">
                 <a href="product1.html">
                 <div>
                     <picture>
-                        <source srcset="images/product1/product1_thumbnail.webp" width="200" height="150"
+                        <source srcset="images/product1/product1_products.webp" width="400" height="300"
                             type="image/webp">
-                        <img src="images/product1/product1_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
-                            width="200" height="150">
+                        <img src="images/product1/product1_products.jpg" alt="gul och blå legokruka med grön växt"
+                            width="400" height="300">
                     </picture>
                     <h2>Produktnamn</h2>
                     <h3>Artikelnummer</h3>
@@ -62,10 +62,10 @@
             <article class="productOverview">
                 <div>
                     <picture>
-                        <source srcset="images/product2/product2_thumbnail.webp" width="200" height="150"
+                        <source srcset="images/product2/product2_products.webp" width="400" height="300"
                             type="image/webp">
-                        <img src="images/product2/product2_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
-                            width="200" height="150">
+                        <img src="images/product2/product2_products.jpg" alt="gul och blå legokruka med grön växt"
+                            width="400" height="300">
                     </picture>
                     <h2>Produktnamn</h2>
                     <h3>Artikelnummer</h3>
@@ -75,10 +75,10 @@
             <article class="productOverview">
                 <div>
                     <picture>
-                        <source srcset="images/product3/product3_thumbnail.webp" width="200" height="150"
+                        <source srcset="images/product3/product3_products.webp" width="400" height="300"
                             type="image/webp">
-                        <img src="images/product3/product3_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
-                            width="200" height="150">
+                        <img src="images/product3/product3_products.jpg" alt="gul och blå legokruka med grön växt"
+                            width="400" height="300">
                     </picture>
                     <h2>Produktnamn</h2>
                     <h3>Artikelnummer</h3>
@@ -88,10 +88,10 @@
             <article class="productOverview">
                 <div>
                     <picture>
-                        <source srcset="images/product4/product4_thumbnail.webp" width="200" height="150"
+                        <source srcset="images/product4/product4_products.webp" width="400" height="300"
                             type="image/webp">
-                        <img src="images/product4/product4_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
-                            width="200" height="150">
+                        <img src="images/product4/product4_products.jpg" alt="gul och blå legokruka med grön växt"
+                            width="400" height="300">
                     </picture>
                     <h2>Produktnamn</h2>
                     <h3>Artikelnummer</h3>
@@ -101,10 +101,10 @@
             <article class="productOverview">
                 <div>
                     <picture>
-                        <source srcset="images/product5/product5_thumbnail.webp" width="200" height="150"
+                        <source srcset="images/product5/product5_products.webp" width="400" height="300"
                             type="image/webp">
-                        <img src="images/product5/product5_thumbnail.jpg" alt="gul och blå legokruka med grön växt"
-                            width="200" height="150">
+                        <img src="images/product5/product5_products.webp" alt="gul och blå legokruka med grön växt"
+                            width="400" height="300">
                     </picture>
                     <h2>Produktnamn</h2>
                     <h3>Artikelnummer</h3>
