--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <section>
             <h1>Färdigbyggt lego som inredning</h1>
             <p>Produkter för dig som älskar lego men får ont i fingrarna av att bygga det.
-                Hos oss kan du hitta härliga färdigbyggda alster som du direkt kan använda som inredning hemma. Slipp
+                Hos oss kan du hitta härliga färdigbyggda legoprodukter som du direkt kan använda som inredning hemma. Slipp
                 nariga fingrar, trasiga naglar och huvudvärken av att följa instruktioner.
 
             </p>
             <h2>Våra produkter</h2>
-            <p>Alla våra alster är original-lego som vi bygger ihop själva. Allt för att du ska slippa. Vi bygger alltid
+            <p>Alla våra produkter är original-lego som vi bygger ihop själva. Allt för att du ska slippa. Vi bygger alltid
                 med stor omsorg och paketerar dem mycket noggrant för att de alltid ska komma fram hela till dig.</p>
         </section>
         <aside>
