updating unique products

--- a/product1.html
+++ b/product1.html
@@ -48,17 +48,16 @@
     <main>
         <section class="gridSectionTwo">
             <article class="uniqueProduct">
-                <h1>Produktnamn</h1>
-                <h2>Artikelnummer</h2>
+                <h1>Glada växter</h1>
+                <h2>Artikelnummer: 001-001</h2>
                 <span class="productPrice">495:-</span>
                 <div class="cartButton">
                     <a href="cart.html">LÄGG I VARUKORG</a>
                 </div>
                 <p class="productDescription">
-                    En lite längre beskrivning av produkten ska stå här. Den bör bli ca 3 - 4 meningar lång. En lite
-                    längre beskrivning av produkten ska stå här. Den bör bli ca 3 - 4 meningar lång.
+                    Detta söta sätt innehåller en blå kruka med pilea som sitter ned och en gul kruka med dracena som står upp, båda är dekorerade med med tecknade glada ansikten.
                 </p>
-                <p class="mesurement"> Mått: 30 x 30 cm</p>
+                <p class="mesurement"> Mått: 21 cm x 19 cm</p>
             </article>
         </section>
         <div class="productImages gridSectionOne">
