--- a/product2.html
+++ b/product2.html
@@ -49,16 +49,15 @@
         <section class="gridSectionTwo">
             <article class="uniqueProduct">
                 <h1>Produktnamn</h1>
-                <h2>Artikelnummer</h2>
-                <span class="productPrice">495:-</span>
+                <h2>Artikelnummer: 001-002</h2>
+                <span class="productPrice">395:-</span>
                 <div class="cartButton">
                     <a href="cart.html">LÄGG I VARUKORG</a>
                 </div>
                 <p class="productDescription">
-                    En lite längre beskrivning av produkten ska stå här. Den bör bli ca 3 - 4 meningar lång. En lite
-                    längre beskrivning av produkten ska stå här. Den bör bli ca 3 - 4 meningar lång.
+                    Ett fint litet blomsterarrangemang baserat på torktåliga och tropiska växter som inte behöver vattnas. Varje växt har en terracottafärgad kruka.
                 </p>
-                <p class="mesurement"> Mått: 30 x 30 cm</p>
+                <p class="mesurement"> Mått: 12 x 10 cm</p>
             </article>
         </section>
         <div class="productImages gridSectionOne">
