--- a/products.html
+++ b/products.html
@@ -53,13 +53,14 @@
                         <img src="images/product1/product1_products.jpg" alt="gul och blå legokruka med grön växt"
                             width="400" height="300">
                     </picture>
-                    <h2>Produktnamn</h2>
-                    <h3>Artikelnummer</h3>
+                    <h2>Glada växter</h2>
+                    <h3>Artikelnummer: 001-001</h3>
                     <span class="productPrice">495:-</span>
                 </div>
                 </a>
             </article>
             <article class="productOverview">
+                <a href="product2.html">
                 <div>
                     <picture>
                         <source srcset="images/product2/product2_products.webp" width="400" height="300"
@@ -67,12 +68,14 @@
                         <img src="images/product2/product2_products.jpg" alt="gul och blå legokruka med grön växt"
                             width="400" height="300">
                     </picture>
-                    <h2>Produktnamn</h2>
-                    <h3>Artikelnummer</h3>
-                    <span class="productPrice">99:-</span>
+                    <h2>Små växter</h2>
+                    <h3>Artikelnummer: 001-002</h3>
+                    <span class="productPrice">395:-</span>
                 </div>
+                </a>
             </article>
             <article class="productOverview">
+                <a href="product3.html">
                 <div>
                     <picture>
                         <source srcset="images/product3/product3_products.webp" width="400" height="300"
@@ -80,12 +83,14 @@
                         <img src="images/product3/product3_products.jpg" alt="gul och blå legokruka med grön växt"
                             width="400" height="300">
                     </picture>
-                    <h2>Produktnamn</h2>
-                    <h3>Artikelnummer</h3>
-                    <span class="productPrice">99:-</span>
+                    <h2>Game boy</h2>
+                    <h3>Artikelnummer: 001-003</h3>
+                    <span class="productPrice">795:-</span>
                 </div>
+                </a>
             </article>
             <article class="productOverview">
+                <a href="product4.html">
                 <div>
                     <picture>
                         <source srcset="images/product4/product4_products.webp" width="400" height="300"
@@ -93,12 +98,14 @@
                         <img src="images/product4/product4_products.jpg" alt="gul och blå legokruka med grön växt"
                             width="400" height="300">
                     </picture>
-                    <h2>Produktnamn</h2>
-                    <h3>Artikelnummer</h3>
-                    <span class="productPrice">99:-</span>
+                    <h2>Nanohandsken</h2>
+                    <h3>Artikelnummer: 001-004</h3>
+                    <span class="productPrice">595:-</span>
                 </div>
+                </a>
             </article>
             <article class="productOverview">
+                <a href="product5.html">
                 <div>
                     <picture>
                         <source srcset="images/product5/product5_products.webp" width="400" height="300"
@@ -106,10 +113,11 @@
                         <img src="images/product5/product5_products.webp" alt="gul och blå legokruka med grön växt"
                             width="400" height="300">
                     </picture>
-                    <h2>Produktnamn</h2>
-                    <h3>Artikelnummer</h3>
-                    <span class="productPrice">99:-</span>
+                    <h2>R2-D2</h2>
+                    <h3>Artikelnummer: 001-005</h3>
+                    <span class="productPrice">1395:-</span>
                 </div>
+                </a>
             </article>
         </section>
         <section class="GridSectionOne">
