--- a/product3.html
+++ b/product3.html
@@ -48,17 +48,17 @@
     <main>
         <section class="gridSectionTwo">
             <article class="uniqueProduct">
-                <h1>Produktnamn</h1>
-                <h2>Artikelnummer</h2>
-                <span class="productPrice">495:-</span>
+                <h1>Game boy</h1>
+                <h2>Artikelnummer: 001-003</h2>
+                <span class="productPrice">795:-</span>
                 <div class="cartButton">
                     <a href="cart.html">LÄGG I VARUKORG</a>
                 </div>
                 <p class="productDescription">
-                    En lite längre beskrivning av produkten ska stå här. Den bör bli ca 3 - 4 meningar lång. En lite
-                    längre beskrivning av produkten ska stå här. Den bör bli ca 3 - 4 meningar lång.
+                    Detta nostalgiska bygge av ett Game Boy, i nästan naturlig storlek, kan bli en spännande detalj i ditt hem.
+                    Dessutom går knapparna att trycka på som den riktiga konsolen!
                 </p>
-                <p class="mesurement"> Mått: 30 x 30 cm</p>
+                <p class="mesurement"> Mått: 14 x 9 cm</p>
             </article>
         </section>
         <div class="productImages gridSectionOne">
