--- a/product4.html
+++ b/product4.html
@@ -46,17 +46,17 @@
     <main>
         <section class="gridSectionTwo">
             <article class="uniqueProduct">
-                <h1>Produktnamn</h1>
-                <h2>Artikelnummer</h2>
-                <span class="productPrice">495:-</span>
+                <h1>Nanohandsken</h1>
+                <h2>Artikelnummer: 001-004</h2>
+                <span class="productPrice">595:-</span>
                 <div class="cartButton">
                     <a href="cart.html">LÄGG I VARUKORG</a>
                 </div>
                 <p class="productDescription">
-                    En lite längre beskrivning av produkten ska stå här. Den bör bli ca 3 - 4 meningar lång. En lite
-                    längre beskrivning av produkten ska stå här. Den bör bli ca 3 - 4 meningar lång.
+                    Är du ett Marvel fan så passar denna modell av Nanohandsken från filmen Avengers: Endgame ditt hem perfekt.
+                    En härlig färgklick som livar upp.
                 </p>
-                <p class="mesurement"> Mått: 30 x 30 cm</p>
+                <p class="mesurement"> Mått: 31 x 12 cm</p>
             </article>
         </section>
         <div class="productImages gridSectionOne">
