--- a/product5.html
+++ b/product5.html
@@ -46,17 +46,16 @@
     <main>
         <section class="gridSectionTwo">
             <article class="uniqueProduct">
-                <h1>Produktnamn</h1>
-                <h2>Artikelnummer</h2>
-                <span class="productPrice">495:-</span>
+                <h1>R2-D2</h1>
+                <h2>Artikelnummer: 001-005</h2>
+                <span class="productPrice">1395:-</span>
                 <div class="cartButton">
                     <a href="cart.html">LÄGG I VARUKORG</a>
                 </div>
                 <p class="productDescription">
-                    En lite längre beskrivning av produkten ska stå här. Den bör bli ca 3 - 4 meningar lång. En lite
-                    längre beskrivning av produkten ska stå här. Den bör bli ca 3 - 4 meningar lång.
+                    Den mest omtyckta drioden från Star Wars galaxen R2-D2. En detaljrik modell som ger karaktär till ditt hem.
                 </p>
-                <p class="mesurement">Mått: 30 x 30 cm</p>
+                <p class="mesurement">Mått: 24 x 16 cm</p>
             </article>
         </section>
         <div class="productImages gridSectionOne">
