create video element

--- a/product1.html
+++ b/product1.html
@@ -55,7 +55,8 @@
                     <a href="cart.html">LÄGG I VARUKORG</a>
                 </div>
                 <p class="productDescription">
-                    Detta söta sätt innehåller en blå kruka med pilea som sitter ned och en gul kruka med dracena som står upp, båda är dekorerade med med tecknade glada ansikten.
+                    Detta söta sätt innehåller en blå kruka med pilea som sitter ned och en gul kruka med dracena som
+                    står upp, båda är dekorerade med med tecknade glada ansikten.
                 </p>
                 <p class="mesurement"> Mått: 21 cm x 19 cm</p>
             </article>
@@ -88,7 +89,11 @@
             </div>
         </div>
         <div class="video">
-
+            <video id="backgroundvideo" autoplay muted loop playsinline>
+                <source src="media/Video_Webshop.webm" type="video/webm">
+                <source src="media/Video_webshop.mp4" type="video/mp4">
+                " Din webbläsare stödjer inte video-formatet. "
+            </video>
         </div>
     </main>
     <div class="fullBackground">
