--- a/product1.html
+++ b/product1.html
@@ -90,7 +90,7 @@
         </div>
         <div class="video">
             <video id="backgroundvideo" autoplay muted loop playsinline>
-                <source src="media/Video_Webshop.webm" type="video/webm">
+                <source src="media/Video_webshop.webm" type="video/webm">
                 <source src="media/Video_webshop.mp4" type="video/mp4">
                 " Din webbläsare stödjer inte video-formatet. "
             </video>
