--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="images/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="images/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <title>Startsida - Lego Interior Design</title>
 </head>
 
@@ -56,12 +60,14 @@
         <section>
             <h1>Färdigbyggt lego som inredning</h1>
             <p>Produkter för dig som älskar lego men får ont i fingrarna av att bygga det.
-                Hos oss kan du hitta härliga färdigbyggda legoprodukter som du direkt kan använda som inredning hemma. Slipp
+                Hos oss kan du hitta härliga färdigbyggda legoprodukter som du direkt kan använda som inredning hemma.
+                Slipp
                 nariga fingrar, trasiga naglar och huvudvärken av att följa instruktioner.
 
             </p>
             <h2>Våra produkter</h2>
-            <p>Alla våra produkter är original-lego som vi bygger ihop själva. Allt för att du ska slippa. Vi bygger alltid
+            <p>Alla våra produkter är original-lego som vi bygger ihop själva. Allt för att du ska slippa. Vi bygger
+                alltid
                 med stor omsorg och paketerar dem mycket noggrant för att de alltid ska komma fram hela till dig.</p>
         </section>
         <aside>
