--- a/product4.html
+++ b/product4.html
@@ -8,6 +8,10 @@
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/js/lightbox-plus-jquery.min.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/css/lightbox.min.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="images/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="images/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <title>Produkter - Lego Interior Design</title>
 </head>
 
@@ -15,14 +19,16 @@
     <header>
         <div class="verticalCenter">
             <div class="topnav">
-                <a href="index.html"><picture class="headerLogo">
-                    <source media="(min-width: 900px)" srcset="images/logotype_full_white.svg" width="1100" height="85"
-                        type="image/svg+xml">
-                    <source media="(max-width: 899px)" srcset="images/logotype_small_white.svg" width="150" height="100"
-                        type="image/svg+xml">
-                    <img class="logotype" src="images/logotype_small_white.svg" alt="Lego Interior Design" width="1100"
-                        height="85">
-                </picture></a>
+                <a href="index.html">
+                    <picture class="headerLogo">
+                        <source media="(min-width: 900px)" srcset="images/logotype_full_white.svg" width="1100"
+                            height="85" type="image/svg+xml">
+                        <source media="(max-width: 899px)" srcset="images/logotype_small_white.svg" width="150"
+                            height="100" type="image/svg+xml">
+                        <img class="logotype" src="images/logotype_small_white.svg" alt="Lego Interior Design"
+                            width="1100" height="85">
+                    </picture>
+                </a>
                 <a href="javascript:void(0);" class="icon-menu">
                     <img id="hamburgerMenu" src="images/mobile_hamburger_menu.svg" alt="öppna navigeringsmeny">
                 </a>
@@ -53,7 +59,8 @@
                     <a href="cart.html">LÄGG I VARUKORG</a>
                 </div>
                 <p class="productDescription">
-                    Är du ett Marvel fan så passar denna modell av Nanohandsken från filmen Avengers: Endgame ditt hem perfekt.
+                    Är du ett Marvel fan så passar denna modell av Nanohandsken från filmen Avengers: Endgame ditt hem
+                    perfekt.
                     En härlig färgklick som livar upp.
                 </p>
                 <p class="mesurement"> Mått: 31 x 12 cm</p>
