--- a/products.html
+++ b/products.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="images/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="images/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <title>Produkter - Lego Interior Design</title>
 </head>
 
@@ -13,14 +17,16 @@
     <header>
         <div class="verticalCenter">
             <div class="topnav">
-                <a href="index.html"><picture class="headerLogo">
-                    <source media="(min-width: 900px)" srcset="images/logotype_full_white.svg" width="1100" height="85"
-                        type="image/svg+xml">
-                    <source media="(max-width: 899px)" srcset="images/logotype_small_white.svg" width="150" height="100"
-                        type="image/svg+xml">
-                    <img class="logotype" src="images/logotype_small_white.svg" alt="Lego Interior Design" width="1100"
-                        height="85">
-                </picture></a>
+                <a href="index.html">
+                    <picture class="headerLogo">
+                        <source media="(min-width: 900px)" srcset="images/logotype_full_white.svg" width="1100"
+                            height="85" type="image/svg+xml">
+                        <source media="(max-width: 899px)" srcset="images/logotype_small_white.svg" width="150"
+                            height="100" type="image/svg+xml">
+                        <img class="logotype" src="images/logotype_small_white.svg" alt="Lego Interior Design"
+                            width="1100" height="85">
+                    </picture>
+                </a>
                 <a href="javascript:void(0);" class="icon-menu">
                     <img id="hamburgerMenu" src="images/mobile_hamburger_menu.svg" alt="öppna navigeringsmeny">
                 </a>
@@ -46,77 +52,77 @@
             <h1>Produkter</h1>
             <article class="productOverview">
                 <a href="product1.html">
-                <div>
-                    <picture>
-                        <source srcset="images/product1/product1_products.webp" width="400" height="300"
-                            type="image/webp">
-                        <img src="images/product1/product1_products.jpg" alt="gul och blå legokruka med grön växt"
-                            width="400" height="300">
-                    </picture>
-                    <h2>Glada växter</h2>
-                    <h3>Artikelnummer: 001-001</h3>
-                    <span class="productPrice">495:-</span>
-                </div>
+                    <div>
+                        <picture>
+                            <source srcset="images/product1/product1_products.webp" width="400" height="300"
+                                type="image/webp">
+                            <img src="images/product1/product1_products.jpg" alt="gul och blå legokruka med grön växt"
+                                width="400" height="300">
+                        </picture>
+                        <h2>Glada växter</h2>
+                        <h3>Artikelnummer: 001-001</h3>
+                        <span class="productPrice">495:-</span>
+                    </div>
                 </a>
             </article>
             <article class="productOverview">
                 <a href="product2.html">
-                <div>
-                    <picture>
-                        <source srcset="images/product2/product2_products.webp" width="400" height="300"
-                            type="image/webp">
-                        <img src="images/product2/product2_products.jpg" alt="gul och blå legokruka med grön växt"
-                            width="400" height="300">
-                    </picture>
-                    <h2>Små växter</h2>
-                    <h3>Artikelnummer: 001-002</h3>
-                    <span class="productPrice">395:-</span>
-                </div>
+                    <div>
+                        <picture>
+                            <source srcset="images/product2/product2_products.webp" width="400" height="300"
+                                type="image/webp">
+                            <img src="images/product2/product2_products.jpg" alt="gul och blå legokruka med grön växt"
+                                width="400" height="300">
+                        </picture>
+                        <h2>Små växter</h2>
+                        <h3>Artikelnummer: 001-002</h3>
+                        <span class="productPrice">395:-</span>
+                    </div>
                 </a>
             </article>
             <article class="productOverview">
                 <a href="product3.html">
-                <div>
-                    <picture>
-                        <source srcset="images/product3/product3_products.webp" width="400" height="300"
-                            type="image/webp">
-                        <img src="images/product3/product3_products.jpg" alt="gul och blå legokruka med grön växt"
-                            width="400" height="300">
-                    </picture>
-                    <h2>Game boy</h2>
-                    <h3>Artikelnummer: 001-003</h3>
-                    <span class="productPrice">795:-</span>
-                </div>
+                    <div>
+                        <picture>
+                            <source srcset="images/product3/product3_products.webp" width="400" height="300"
+                                type="image/webp">
+                            <img src="images/product3/product3_products.jpg" alt="gul och blå legokruka med grön växt"
+                                width="400" height="300">
+                        </picture>
+                        <h2>Game boy</h2>
+                        <h3>Artikelnummer: 001-003</h3>
+                        <span class="productPrice">795:-</span>
+                    </div>
                 </a>
             </article>
             <article class="productOverview">
                 <a href="product4.html">
-                <div>
-                    <picture>
-                        <source srcset="images/product4/product4_products.webp" width="400" height="300"
-                            type="image/webp">
-                        <img src="images/product4/product4_products.jpg" alt="gul och blå legokruka med grön växt"
-                            width="400" height="300">
-                    </picture>
-                    <h2>Nanohandsken</h2>
-                    <h3>Artikelnummer: 001-004</h3>
-                    <span class="productPrice">595:-</span>
-                </div>
+                    <div>
+                        <picture>
+                            <source srcset="images/product4/product4_products.webp" width="400" height="300"
+                                type="image/webp">
+                            <img src="images/product4/product4_products.jpg" alt="gul och blå legokruka med grön växt"
+                                width="400" height="300">
+                        </picture>
+                        <h2>Nanohandsken</h2>
+                        <h3>Artikelnummer: 001-004</h3>
+                        <span class="productPrice">595:-</span>
+                    </div>
                 </a>
             </article>
             <article class="productOverview">
                 <a href="product5.html">
-                <div>
-                    <picture>
-                        <source srcset="images/product5/product5_products.webp" width="400" height="300"
-                            type="image/webp">
-                        <img src="images/product5/product5_products.webp" alt="gul och blå legokruka med grön växt"
-                            width="400" height="300">
-                    </picture>
-                    <h2>R2-D2</h2>
-                    <h3>Artikelnummer: 001-005</h3>
-                    <span class="productPrice">1395:-</span>
-                </div>
+                    <div>
+                        <picture>
+                            <source srcset="images/product5/product5_products.webp" width="400" height="300"
+                                type="image/webp">
+                            <img src="images/product5/product5_products.webp" alt="gul och blå legokruka med grön växt"
+                                width="400" height="300">
+                        </picture>
+                        <h2>R2-D2</h2>
+                        <h3>Artikelnummer: 001-005</h3>
+                        <span class="productPrice">1395:-</span>
+                    </div>
                 </a>
             </article>
         </section>
