--- a/product2.html
+++ b/product2.html
@@ -8,6 +8,10 @@
     <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/js/lightbox-plus-jquery.min.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/css/lightbox.min.css">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="images/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="images/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <title>Produkter - Lego Interior Design</title>
 </head>
 
@@ -55,7 +59,8 @@
                     <a href="cart.html">LÄGG I VARUKORG</a>
                 </div>
                 <p class="productDescription">
-                    Ett fint litet blomsterarrangemang baserat på torktåliga och tropiska växter som inte behöver vattnas. Varje växt har en terracottafärgad kruka.
+                    Ett fint litet blomsterarrangemang baserat på torktåliga och tropiska växter som inte behöver
+                    vattnas. Varje växt har en terracottafärgad kruka.
                 </p>
                 <p class="mesurement"> Mått: 12 x 10 cm</p>
             </article>
