--- a/product2.html
+++ b/product2.html
@@ -29,9 +29,10 @@
                             width="1100" height="85">
                     </picture>
                 </a>
-                <a href="javascript:void(0);" class="icon-menu">
-                    <img id="hamburgerMenu" src="images/mobile_hamburger_menu.svg" alt="öppna navigeringsmeny">
-                </a>
+                <div class="icon-menu">
+                    <img id="hamburgerMenu" src="images/mobile_hamburger_menu.svg" width="100" height="100"
+                        alt="öppna navigeringsmeny">
+                </div>
             </div>
         </div>
     </header>
