--- a/product3.html
+++ b/product3.html
@@ -19,7 +19,7 @@
     <header>
         <div class="verticalCenter">
             <div class="topnav">
-                <a href="index.html">
+                <a href="index.html" title="startsida">
                     <picture class="headerLogo">
                         <source media="(min-width: 900px)" srcset="images/logotype_full_white.svg" width="1100"
                             height="85" type="image/svg+xml">
@@ -71,7 +71,7 @@
             <a href="images/product3/product3_lightbox.jpg" target="_blank" data-lightbox="product1-images">
                 <picture>
                     <source srcset="images/product3/product3_main.webp" width="450" height="338" type="image/webp">
-                    <img src="images/product3/product3_main.jpg" alt="gul och blå legokruka med grön växt" width="450"
+                    <img src="images/product3/product3_main.jpg" alt="Grått Nintendo Game Boy spel konsol" width="450"
                         height="338">
                 </picture>
             </a>
@@ -80,7 +80,7 @@
                     <picture>
                         <source srcset="images/product3/product3_2mainsmall.webp" width="150" height="113"
                             type="image/webp">
-                        <img src="images/product3/product3_2mainsmall.jpg" alt="gul och blå legokruka med grön växt"
+                        <img src="images/product3/product3_2mainsmall.jpg" alt="Grått Nintendo Game Boy spel konsol"
                             width="150" height="113">
                     </picture>
                 </a>
@@ -88,7 +88,7 @@
                     <picture>
                         <source srcset="images/product3/product3_3mainsmall.webp" width="150" height="113"
                             type="image/webp">
-                        <img src="images/product3/product3_3mainsmall.jpg" alt="gul och blå legokruka med grön växt"
+                        <img src="images/product3/product3_3mainsmall.jpg" alt="Grått Nintendo Game Boy spel konsol"
                             width="150" height="113">
                     </picture>
                 </a>
