--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="verticalCenter">
             <div class="topnav">
-                <a href="index.html">
+                <a href="index.html" title="startsida">
                     <picture class="headerLogo">
                         <source media="(min-width: 900px)" srcset="images/logotype_full_white.svg" width="1100"
                             height="85" type="image/svg+xml">
