--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="icon" type="images/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="images/png" sizes="16x16" href="/favicon-16x16.png">
@@ -28,7 +27,8 @@
                     </picture>
                 </a>
                 <div class="icon-menu">
-                    <img id="hamburgerMenu" src="images/mobile_hamburger_menu.svg" width="100" height="100" alt="öppna navigeringsmeny">
+                    <img id="hamburgerMenu" src="images/mobile_hamburger_menu.svg" width="100" height="100"
+                        alt="öppna navigeringsmeny">
                 </div>
             </div>
         </div>
@@ -129,6 +129,7 @@
             }
         }
     </script>
+    <script src="https://kit.fontawesome.com/b5d5f68d91.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
